outputs/main/reevo_bpp_online_2025-08-07_21-26-17/problem_iter8_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 113
    raw_score[0 if feasible[i] else -np.inf for i in range(n_bins)] = np.where(
                                            ^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 113
    raw_score[0 if feasible[i] else -np.inf for i in range(n_bins)] = np.where(
                                            ^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 113
    raw_score[0 if feasible[i] else -np.inf for i in range(n_bins)] = np.where(
                                            ^^^
SyntaxError: invalid syntax
